objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>Prospect Meeting</fullName>
                </value>
                <value>
                    <fullName>Solution Architect Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avnio__ContentDocumentTemplateId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Content Document/Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avnio__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avnio__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>